# Photon

./: .clang-format  .clangd  .env  .gitignore  .gitmodules  AGENTS.md  BUILD_ARM64.md  CMakeLists.txt  CMakeSettings.json  Photon_arm64  README  README.md  build  build_arm64.sh  compile.sh  deploy-to-pi.sh  imgui.ini  log  makeDeb.sh  notes.md  photon.rc  piInstall.sh  read_dbc.py  setup.sh  t  telem_rev1.dbc  vert.sh  winBuild.ps1
.github/: copilot-instructions.md
assets/dbc/: CMakeLists.txt  CarCAN.dbc  DAqCAN.dbc  ElconCAN.dbc  HighNoon.dbc  LightingCAN.dbc  SteeringCAN.dbc  assettoCorsa.dbc  contactor.dbc  daq.dbc  daybreak-master.dbc  gps_car.dbc  highnoon_telemetry.dbc  lonestar.dbc  mppt.dbc  newDAQ.dbc  prohelion_wavesculptor22.dbc  t.dbc  telem_rev1.dbc  test.dbc  vehicle-with-undisclosed-name.dbc
assets/kernels/: CMakeLists.txt  background.frag  band.frag  default.frag  glowButton.frag  gltf.frag  gltf.vert  lens.frag  muon.frag  nucleus.frag  obj.frag  old.frag  postProcess.frag  scene.vert  sun.frag  triangle.vert  ui.frag  viking.frag
assets/kernels/glsl/: accretion.frag  background.frag  bits.frag  box.frag  carPostProcess.frag  church.frag  default.frag  glossGrad.frag  glossSmooth.frag  gltf.frag  postProcess.vert  scene.frag  scenePostProcess.frag  water.frag
assets/kernels/metal/: .gitkeep
assets/models/: CMakeLists.txt  DataAcqLeaderBoard.gltf  aero.gltf  batset.gltf  battery.glb  daybreak.glb  newCar.glb  new_dyn.glb  s26_simple_track.glb  s26track.glb  track.glb
base/: CMakeLists.txt  CommandLineParser.hpp  Entrypoints.h  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.hpp  VulkanInitializers.hpp  VulkanRaytracingSample.cpp  VulkanRaytracingSample.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  benchmark.hpp  camera.hpp  keycodes.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h  xdg-shell.c
cmake/: arm64-toolchain.cmake  pad  spv_to_header.py
core/: CMakeLists.txt  backend.cpp  backend.hpp  candb.cpp  candb.hpp  config.hpp  dbc.cpp  dbc.hpp  gui.hpp  imgui_ini.hpp  main.cpp  ringbuffer.cpp  ringbuffer.hpp  serial.cpp  serial.hpp  signal_routing.cpp  signal_routing.hpp  tcp.cpp  tcp.hpp  windows.hpp
core/gui/: functions.h  gui.cpp  lua.cpp  variables.h
dbc/: CarCAN.dbc  bps.dbc  controls.dbc  daq.dbc  new_controls.dbc  prohelion_wavesculptor22.dbc  tpee_mppt[A].dbc
find/: FindXCB.cmake  bin_to_header.py  embed_assets.cmake  generate_macho_asset_asm.cmake  spv_to_header.py  ttf_to_header.py  unpack_asset_header.cmake
fonts/: CMakeLists.txt
kernels/: CMakeLists.txt  band.frag  custom_shader.frag  custom_shader.vert  default.frag  defaultWhite.frag  dust.frag  eyes.frag  kalman_filter.comp  scene.frag  scene.vert  solar.frag  sun.frag  ui.frag  ui.vert
kernels/spirv/: scene.frag.spv  scene.vert.spv
models/: daybreak.glb  flipped.glb  (+1 more)
photon/: CMakeLists.txt
photon/engine/: CMakeLists.txt  chunking.cpp  chunking.hpp  dotenv.hpp  include.hpp  main.cpp  osmChunkFormat.hpp  osmLoader.cpp  osmLoader.hpp  photon.cpp  photon.hpp
photon/gpu/: CMakeLists.txt  LRUCache.cpp  camera.hpp  gltf.cpp  gltf.hpp  gpu.cpp  gpu.hpp  gpuMetal.cpp  gpuMetal.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanDevice.cpp  vulkanDevice.hpp  vulkanGLTF.cpp  vulkanGLTF.hpp  vulkanLoader.cpp  vulkanLoader.h  vulkanOBJ.cpp  vulkanOBJ.cpp~  vulkanOBJ.hpp  vulkanShader.cpp  vulkanShader.hpp  vulkanSwapchain.cpp  vulkanSwapchain.hpp  vulkanVideo.cpp  vulkanVideo.hpp  vulkanVideoDecode.cpp  vulkanVideoDecode.hpp
photon/gui/: CMakeLists.txt  arenaGui.cpp  canvas.cpp  canvas.hpp  config.cpp  config.hpp  console.hpp  customView.cpp  customView.hpp  customViewCan.cpp  customViewCan.hpp  customViewCellGrid.cpp  customViewCellGrid.hpp  customViewDocument.cpp  customViewDocument.hpp  customViewTelemetry.cpp  customViewTelemetry.hpp  customViewTypes.hpp  customViewWatchdog.cpp  customViewWatchdog.hpp  dbc.cpp  dbc.hpp  exportPanel.cpp  exportPanel.hpp  exporter.cpp  exporter.hpp  fileDialog.cpp  fileDialog.hpp  frame.cpp  frame.hpp  gpuGui.cpp  gpuGui.hpp  gpuMetalGui.cpp  gpuMetalGui.hpp  gui.cpp  gui.hpp  hot_reload.cpp  inputs.cpp  inputs.hpp  io.cpp  (+45 more)
photon/gui/DDash/: arena_bridge.cpp  arena_bridge.hpp  dashboard.cpp  dashboard.h  dashboard_tab.cpp  dashboard_tab.h  icons.h  kart_launcher.cpp  kart_launcher.h  main_standalone.cpp  state.h  theme.cpp  theme.h  ui.h  widgets.cpp  widgets.h
photon/io/: CMakeLists.txt  csv_exporter.cpp  csv_exporter.hpp  network_suspender.cpp  network_suspender.hpp  photonlog.hpp  pre_fault_recorder.cpp  pre_fault_recorder.hpp  replay_controller.cpp  replay_controller.hpp  spsc_ring.hpp
photon/network/: CMakeLists.txt  canp.c  canp.h  connecter.cpp  dashboardLink.hpp  dbc.cpp  dbc.hpp  dbc_connector.hpp  dbc_loader.cpp  dbc_loader.hpp  dbc_manager.cpp  dbc_manager.hpp  dbc_watcher.cpp  dbc_watcher.hpp  network.cpp  network.hpp  protocols.cpp  protocols.hpp  spsc.hpp  tcp.cpp  udp.cpp  udp.hpp  zed.c
photon/parse/: CMakeLists.txt  arena.cpp  arena.hpp  corsa.hpp  dbc.cpp  dbc.hpp  parse.cpp  parse.hpp  spmc.hpp  video_decoder.cpp  video_decoder.hpp
photon/synth/: CMakeLists.txt  synth.cpp  synth.hpp
src/: CMakeLists.txt  main.cpp
src/Application/: CMakeLists.txt
src/GUI/: CMakeLists.txt  ImGuiLayer.h
src/Network/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  SerialPort.cpp  SerialPort.h  TcpClient.cpp  TcpClient.h
src/Renderer/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h
src/Renderer/shaders/: vert.spv  vert_shader.vert
src/Utils/: CMakeLists.txt  TelemetryData.h
tests/io/: CMakeLists.txt  pbt_arena.cpp  pbt_csv_exporter.cpp  pbt_pre_fault_recorder.cpp  pbt_replay_controller.cpp  test_csv_exporter.cpp  test_integration.cpp  test_pre_fault_integration.cpp  test_pre_fault_recorder.cpp  test_replay_controller.cpp
(+127 files in other folders)
