#/CMakeLists.txt
cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/find")

set(NAME Photon)
project(NAME VERSION 1.0)

if (NOT DEFINED VULKAN_SDK AND DEFINED ENV{VULKAN_SDK})
    set(VULKAN_SDK $ENV{VULKAN_SDK})
endif()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(_photon_release_opt_flag "")
set(_photon_is_msvc_like FALSE)

if (MSVC)
    set(_photon_is_msvc_like TRUE)
elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    if (CMAKE_CXX_COMPILER MATCHES "clang-cl" OR CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
        set(_photon_is_msvc_like TRUE)
    endif()
endif()

if (_photon_is_msvc_like)
    add_compile_options(/Oy-)
    set(_photon_release_opt_flag "/O2 /Oi /Gy /GF")
else()
    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        add_compile_options(-fno-omit-frame-pointer)
        set(_photon_release_opt_flag "-O3")
    endif()
endif()

if (_photon_release_opt_flag)
    foreach(_lang C CXX)
        set(_var "CMAKE_${_lang}_FLAGS_RELEASE")
        set(${_var} "${${_var}} ${_photon_release_opt_flag}" CACHE STRING "" FORCE)
    endforeach()
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
endif()

if (MSVC OR CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC" OR CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "" FORCE)
endif()

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(_photon_release_opt_flag "-O3")
    foreach(_lang C CXX)
        set(_var "CMAKE_${_lang}_FLAGS_RELEASE")
        set(${_var} "${${_var}} ${_photon_release_opt_flag}" CACHE STRING "" FORCE)
    endforeach()
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
endif()

set(_photon_output_root ${CMAKE_BINARY_DIR}/photon)
if (CMAKE_CONFIGURATION_TYPES)
    foreach(_cfg ${CMAKE_CONFIGURATION_TYPES})
        string(TOUPPER ${_cfg} _cfg_upper)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${_cfg_upper} ${_photon_output_root}/${_cfg})
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${_cfg_upper} ${_photon_output_root}/${_cfg})
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${_cfg_upper} ${_photon_output_root}/${_cfg})
    endforeach()
else()
    if (NOT CMAKE_BUILD_TYPE)
        set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type")
        set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
    endif()
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${_photon_output_root}/${CMAKE_BUILD_TYPE})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${_photon_output_root}/${CMAKE_BUILD_TYPE})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${_photon_output_root}/${CMAKE_BUILD_TYPE})
endif()

if (WIN32)
    add_compile_definitions(WIN32_LEAN_AND_MEAN NOMINMAX _USE_MATH_DEFINES _CRT_SECURE_NO_WARNINGS)
endif()

include_directories(.external)
include_directories(.external/glm)
include_directories(.external/vulkan)
include_directories(.external/vk_video)
include_directories(.external/stb)
include_directories(.external/imgui)
include_directories(.external/imgui/backends)
include_directories(.external/tinygltf)
include_directories(${CMAKE_BINARY_DIR}/generated)

# Surface SDL3 that was dropped into .external (e.g., from the official prebuilt archive)
set(_photon_sdl3_vendor_root "${CMAKE_SOURCE_DIR}/.external")
if (EXISTS "${_photon_sdl3_vendor_root}")
    file(GLOB _photon_sdl3_prefixes
        LIST_DIRECTORIES true
        "${_photon_sdl3_vendor_root}/SDL3"
        "${_photon_sdl3_vendor_root}/SDL3-*")
    foreach(_photon_sdl3_prefix ${_photon_sdl3_prefixes})
        if (EXISTS "${_photon_sdl3_prefix}/cmake/SDL3Config.cmake")
            list(APPEND CMAKE_PREFIX_PATH "${_photon_sdl3_prefix}/cmake")
        elseif (EXISTS "${_photon_sdl3_prefix}/lib/cmake/SDL3/SDL3Config.cmake")
            list(APPEND CMAKE_PREFIX_PATH "${_photon_sdl3_prefix}/lib/cmake/SDL3")
        endif()
    endforeach()
endif()

# require python
find_package(Python3 REQUIRED COMPONENTS Interpreter)

# find SDL3 for the GPU module
find_package(SDL3 QUIET CONFIG)
if (TARGET SDL3::SDL3-static)
    set(PHOTON_SDL_TARGET SDL3::SDL3-static)
elseif (TARGET SDL3::SDL3)
    set(PHOTON_SDL_TARGET SDL3::SDL3)
elseif (NOT WIN32)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(SDL3 REQUIRED IMPORTED_TARGET sdl3)
    set(PHOTON_SDL_TARGET PkgConfig::SDL3)
else()
    message(FATAL_ERROR "SDL3 was not found. Install the SDL3 development package that provides SDL3Config.cmake and point SDL3_DIR to it, or drop the prebuilt binaries into the tree.")
endif()

option(PHOTON_REQUIRE_STATIC_RELEASE "Fail configuration if a Release build would link against dynamic third-party libraries" OFF)
if (PHOTON_REQUIRE_STATIC_RELEASE AND NOT CMAKE_CONFIGURATION_TYPES)
    string(TOUPPER "${CMAKE_BUILD_TYPE}" _photon_build_type_upper)
    if (_photon_build_type_upper STREQUAL "RELEASE")
        set(_photon_known_static_targets SDL3::SDL3-static)
        if (NOT PHOTON_SDL_TARGET IN_LIST _photon_known_static_targets)
            message(FATAL_ERROR "Release builds require static third-party libraries. Provide SDL3::SDL3-static (or disable PHOTON_REQUIRE_STATIC_RELEASE).")
        endif()
    endif()
endif()

# find Vulkan
IF(WIN32)
	IF (NOT Vulkan_FOUND)
		find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
		IF (Vulkan_LIBRARY)
			set(Vulkan_FOUND ON)
			MESSAGE("Using bundled Vulkan library version")
		ENDIF()
	ENDIF()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR -DWIN")
ELSE()
	IF(NOT Vulkan_FOUND)
    	find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
    	IF(Vulkan_LIBRARY)
        	set(Vulkan_FOUND ON)
        	MESSAGE("Using bundled Vulkan library version")
    	ENDIF()
	ENDIF()
	# find windowing service
	find_package(XCB REQUIRED)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR -DLINUX")
ENDIF()

# check if vulkan was found
IF (NOT Vulkan_FOUND)
	message(FATAL_ERROR "Could not find Vulkan library!")
ELSE()
	message(STATUS ${Vulkan_LIBRARY})
ENDIF()

# link sources
IF(WIN32)
	link_libraries(${Vulkan_LIBRARY})
ELSE()
    link_libraries(${XCB_LIBRARIES} ${Vulkan_LIBRARY})
ENDIF(WIN32)

add_subdirectory(assets/kernels)
add_subdirectory(assets/fonts)
add_subdirectory(assets/dbc)
add_subdirectory(assets/models)
add_subdirectory(photon)
